# distributed-computing-labs-2020

./: .gitignore
lab1/pa1/: Makefile  ipc.c  log.c  log.h  main.c  message.c  message.h  transmission.c  transmission.h
lab1/pa3/: Makefile  bank_robbery.c  ipc.c  load.c  load.h  log.c  main.c  message.c  message.h  pa3.sh  transmission.h  transmisson.c
lab1/pa4/: Makefile  banking.c  lamport.h  main.c  main.h  message.c  message.h  pa4.sh
lab2/: make_archive.sh
lab2/pa6/: CMakeLists.txt  banking.h  ipc.c  lamport.c  main.c  main.h  message.c  message.h  pa2345.h
lab3/: make_archive.sh
lab3/pa7/: CMakeLists.txt  bank_robbery.c  banking.c  banking.h  common.h  ipc.c  ipc.h  lamport.c  lamport.h  main.c  main.h  message.c  message.h  pa2345.h  pavt.c
lab4/pa8/: pom.xml
lab4/pa8/src/main/kotlin/com/ifmo/distributedcomputing/: Acceptor.kt  Application.kt  ChildrenApplication.kt  Connector.kt  IncomingConnection.kt  Message.kt  ParentApplication.kt
lab4/pa8/src/main/kotlin/com/ifmo/distributedcomputing/dto/: Message.kt
lab4/pa8/src/main/kotlin/com/ifmo/distributedcomputing/inbound/: Acceptor.kt  IncomingConnection.kt
lab4/pa8/src/main/kotlin/com/ifmo/distributedcomputing/ipc/: Reactor.kt  SelectorSingleton.kt
lab4/pa8/src/main/kotlin/com/ifmo/distributedcomputing/logic/: LamportMutex.kt  LamportTime.kt
lab4/pa8/src/main/kotlin/com/ifmo/distributedcomputing/outbound/: CommunicationManager.kt  Connector.kt
